--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,22 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@heroicons/react": "^2.1.5",
     "@xyflow/react": "^12.9.2",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.441.0",
-    "@heroicons/react": "^2.1.5"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.3",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.9",
-    "tailwindcss": "^3.4.14",
-    "postcss": "^8.4.47",
     "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
+    "vite": "^7.2.2",
     "vite-plugin-checker": "^0.11.0"
   }
 }
