--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,30 +1,29 @@
+// package.json
 {
-  "name": "workflow-tool-frontend",
+  "name": "nexuspro-sidebar",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.5",
-    "@xyflow/react": "^12.9.2",
-    "framer-motion": "^11.5.4",
-    "lucide-react": "^0.441.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "lucide-react": "^0.447.0",
+    "framer-motion": "^11.5.4",
+    "clsx": "^2.1.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.12",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.8",
+    "tailwindcss": "^3.4.13",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3",
-    "vite": "^7.2.2",
-    "vite-plugin-checker": "^0.11.0"
+    "postcss": "^8.4.47"
   }
 }
